--- a/package.json
+++ b/package.json
@@ -1,16 +1,27 @@
 {
   "name": "gulp-include-html",
-  "version": "0.0.8",
-  "description": "",
+  "version": "0.0.9",
+  "description": "自用gulp插件，可以分割html",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "wanghx",
   "license": "ISC",
-
-  "dependencies":{
+  "dependencies": {
     "through2": "^0.6.3",
-    "ejs":"~2.3.1"
-  }
+    "ejs": "~2.3.1"
+  },
+  "directories": {
+    "test": "test"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/whxaxes/gulp-include-html.git"
+  },
+  "bugs": {
+    "url": "https://github.com/whxaxes/gulp-include-html/issues"
+  },
+  "homepage": "https://github.com/whxaxes/gulp-include-html"
 }
