--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-include-html",
-  "version": "1.0.2",
-  "description": "自用gulp插件，可以分割html",
+  "version": "1.0.3",
+  "description": "gulp插件，html include 工具",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
