--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "directories": {
     "test": "test"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "vinyl-fs": "^2.4.4"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/whxaxes/gulp-include-html.git"
