--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "gulp-include-html",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "gulp插件，html include 工具",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cd test && node test"
   },
   "author": "wanghx",
   "license": "ISC",
